add template on another section

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,11 +6,22 @@ nav {
 
 .author-wrote {
   display: grid;
-  grid-template-columns: 2fr 2fr;
-  grid-template-rows: 725px 725px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 700px 700px;
   background: gray;
 }
 
 .author1, .author2, .author3, .author4 {
+  border: 1px solid white;
+}
+
+.latest-posts {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 500px;
+  background: gray;
+}
+
+.post1, .post2, .post3, .ad {
   border: 1px solid white;
 }
